--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://shashank-shekhar-tripathi.github.io/IHome-React-App/",
+  "homepage": "https://shashank-shekhar-tripathi.github.io/IHome-React-Project/",
   "name": "ihome",
   "private": true,
   "version": "0.0.0",
